test/SemanticAnalysis/Class/InternalConstructInNonMethod.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export int function() {
	// CHECK: .loci:6:9: error: cannot call internal constructor in non-method
	return @();
}

// CHECK: 1 error generated.
